[gd_scene load_steps=10 format=3 uid="uid://dnngo01qchd8e"]

[ext_resource type="Texture2D" uid="uid://cutcexmta2r8e" path="res://Sprites/Enemies/Enemies.png" id="1_fkdvw"]
[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_wltke"]
[ext_resource type="AudioStream" uid="uid://pjaonoyyidn4" path="res://Music/rat.wav" id="3_7268t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l0uwl"]
atlas = ExtResource("1_fkdvw")
region = Rect2(32, 96, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_rout0"]
atlas = ExtResource("1_fkdvw")
region = Rect2(40, 96, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_eakx8"]
atlas = ExtResource("1_fkdvw")
region = Rect2(48, 96, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_otf7k"]
atlas = ExtResource("1_fkdvw")
region = Rect2(56, 96, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_kfu04"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0uwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rout0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eakx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otf7k")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7o7m"]
size = Vector2(6, 4)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_wltke")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kfu04")
autoplay = "default"
frame_progress = 0.35073

[node name="Killzone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_j7o7m")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(11, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-12, 0)

[node name="rat_attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7268t")
bus = &"SFX"

[connection signal="body_entered" from="Killzone" to="." method="_on_killzone_body_entered"]
